--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,102 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="fill_parent" 
-                android:layout_height="wrap_content" android:padding="10px">
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
 
-	<TextView android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:text="Synergy Client name:"
-               android:id="@+id/clientNameTextView"/>
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" >
 
-    <EditText android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:background="@android:drawable/editbox_background"
-              android:text="android"
-              android:layout_below="@id/clientNameTextView"
-              android:id="@+id/clientNameEditText"/>
-	
-	<TextView android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:text="Server IP/Hostname:"
-              android:layout_below="@id/clientNameEditText"
-              android:id="@+id/serverHostTextView"/>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:padding="10dp" >
 
-    <EditText android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:background="@android:drawable/editbox_background"
-              android:text="igsarmewmactck"
-              android:layout_below="@id/serverHostTextView"
-              android:id="@+id/serverHostEditText"/>
+            <TextView
+                android:id="@+id/clientNameTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre del cliente:" />
 
-    <TextView android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:text="Server Port:"
-              android:layout_below="@id/serverHostEditText"
-              android:id="@+id/serverPortTextView"/>
+            <EditText
+                android:id="@+id/clientNameEditText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:text="android" />
 
-    <EditText android:id="@+id/serverPortEditText"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:layout_below="@id/serverPortTextView"
-              android:background="@android:drawable/editbox_background"
-              android:inputType="number"
-              android:text="24800" />
+            <TextView
+                android:id="@+id/serverHostTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="IP/Hostname del servidor:" />
 
-    <TextView android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:text="Input device name:"
-              android:layout_below="@+id/serverPortEditText"
-              android:id="@+id/inputDeviceTextView"/>
+            <EditText
+                android:id="@+id/serverHostEditText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:text="192.168.1." />
 
-    <EditText android:layout_width="fill_parent" 
-              android:layout_height="wrap_content" 
-              android:background="@android:drawable/editbox_background"
-              android:text="touchscreen"
-              android:layout_below="@+id/inputDeviceTextView"
-              android:id="@+id/inputDeviceEditText"/>
+            <TextView
+                android:id="@+id/serverPortTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Puerto:" />
 
-    <Button android:layout_width="wrap_content" 
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/inputDeviceEditText"
-            android:layout_alignParentRight="true"
-            android:text="Connect" 
-            android:id="@+id/connectButton"/>
-    
-<!--    <TabHost xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    android:id="@android:id/tabhost"-->
-<!--    android:layout_width="fill_parent"-->
-<!--    android:layout_height="fill_parent"-->
-<!--    android:layout_below="@id/test">-->
-<!--    	<LinearLayout-->
-<!--        android:orientation="vertical"-->
-<!--        android:layout_width="fill_parent"-->
-<!--        android:layout_height="fill_parent"-->
-<!--        android:padding="5dp">-->
-<!--        <TabWidget-->
-<!--            android:id="@android:id/tabs"-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-<!--        <FrameLayout-->
-<!--            android:id="@android:id/tabcontent"-->
-<!--            android:layout_width="fill_parent"-->
-<!--            android:layout_height="fill_parent"-->
-<!--            android:padding="5dp" />-->
-<!--    </LinearLayout>-->
-<!--</TabHost>-->
-<!--    -->
-    <LinearLayout android:layout_width="fill_parent" 
-                android:layout_height="fill_parent"
-                android:layout_below="@id/connectButton">
-    	
-    	<EditText android:id="@+id/outputEditText"
-    			  android:layout_width="fill_parent" 
-            	  android:layout_height="fill_parent"
-            	  android:background="@android:drawable/editbox_background"/>
-                        
-    
-                
-    </LinearLayout>
-    
+            <EditText
+                android:id="@+id/serverPortEditText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:inputType="number"
+                android:text="24800" />
 
-    
+            <TextView
+                android:id="@+id/inputDeviceTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre del dispositivo de entrada:" />
+
+            <EditText
+                android:id="@+id/inputDeviceEditText"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/editbox_background"
+                android:text="touchscreen" />
+
+            <!-- <TabHost xmlns:android="http://schemas.android.com/apk/res/android" -->
+            <!-- android:id="@android:id/tabhost" -->
+            <!-- android:layout_width="fill_parent" -->
+            <!-- android:layout_height="fill_parent" -->
+            <!-- android:layout_below="@id/test"> -->
+            <!-- <LinearLayout -->
+            <!-- android:orientation="vertical" -->
+            <!-- android:layout_width="fill_parent" -->
+            <!-- android:layout_height="fill_parent" -->
+            <!-- android:padding="5dp"> -->
+            <!-- <TabWidget -->
+            <!-- android:id="@android:id/tabs" -->
+            <!-- android:layout_width="fill_parent" -->
+            <!-- android:layout_height="wrap_content" /> -->
+            <!-- <FrameLayout -->
+            <!-- android:id="@android:id/tabcontent" -->
+            <!-- android:layout_width="fill_parent" -->
+            <!-- android:layout_height="fill_parent" -->
+            <!-- android:padding="5dp" /> -->
+            <!-- </LinearLayout> -->
+            <!-- </TabHost> -->
+            <!--  -->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp" >
+
+                <Button
+                    android:id="@+id/connectButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:text="Conectar" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+				
+				<TextView
+                android:id="@+id/outputEditTextView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Debug:" />
+				
+                <EditText
+                    android:id="@+id/outputEditText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="70dp"
+                    android:background="@android:drawable/editbox_background" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
+
 </RelativeLayout>
