--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -25,35 +25,100 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:drawable/editbox_background"
-                android:text="android" />
+                android:text="android" >
 
-            <TextView
-                android:id="@+id/serverHostTextView"
-                android:layout_width="fill_parent"
+                <requestFocus />
+
+            </EditText>
+
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TableRow
+                    android:id="@+id/tableRow1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" >
+
+                        <TextView
+                            android:id="@+id/serverHostTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/Str_serverHostTextView" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left" >
+
+                        <TextView
+                            android:id="@+id/serverPortTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/Str_serverPortTextView" />
+                    </LinearLayout>
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" >
+
+                        <EditText
+                            android:id="@+id/serverHostEditText"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@android:drawable/editbox_background"
+                            android:ems="10"
+                            android:text="192.168.1." />
+
+                        <TextView
+                            android:id="@+id/TextView01"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=":" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left" >
+
+                        <EditText
+                            android:id="@+id/serverPortEditText"
+                            android:layout_width="84dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@android:drawable/editbox_background"
+                            android:ems="10"
+                            android:inputType="number"
+                            android:text="24800" >
+                        </EditText>
+                    </LinearLayout>
+                </TableRow>
+
+            </TableLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/Str_serverHostTextView" />
-
-            <EditText
-                android:id="@+id/serverHostEditText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/editbox_background"
-                android:text="192.168.1." />
-
-            <TextView
-                android:id="@+id/serverPortTextView"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/Str_serverPortTextView" />
-
-            <EditText
-                android:id="@+id/serverPortEditText"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:drawable/editbox_background"
-                android:inputType="number"
-                android:text="24800" />
-
+                android:gravity="left"
+                android:paddingTop="5dp" >
+            </RelativeLayout>
+            
             <TextView
                 android:id="@+id/inputDeviceTextView"
                 android:layout_width="fill_parent"
@@ -103,9 +168,18 @@
                     android:layout_alignParentTop="true"
                     android:text="@string/Str_connectButton" />
 
+                <CheckBox
+                    android:id="@+id/enable_debug_chekbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:text="@string/Str_debug_checkbox" />
+
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/Debug_Parent_Control"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
@@ -119,8 +193,11 @@
                 <EditText
                     android:id="@+id/outputEditText"
                     android:layout_width="fill_parent"
-                    android:layout_height="70dp"
-                    android:background="@android:drawable/editbox_background" />
+                    android:layout_height="159dp"
+                    android:background="@android:drawable/editbox_background"
+                    android:inputType="textMultiLine"
+                    android:scrollbars="vertical" />
+
             </LinearLayout>
 
 
